<resources>
    <string name="app_name">Transfer_calculator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Transfers efficiency calculator</string>

    <!-- Strings for calculations table fill-->
    <string name="usd_row_name">USD</string>
    <string name="euro_row_name">EURO</string>
    <string name="gel_row_name">GEL</string>
    <string name="unistream_column_name">Unistream\n ratio</string>
    <string name="rico_column_name">Rico ratio</string>
    <string name="result_column_name">Efficiency\n ratio</string>

    <string name="calculate_button_txt">Calculate</string>

</resources>